// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<Connect(CelebrateFeed)
  itemNamePressable={true}
  items={
    Array [
      Object {
        "data": Array [
          Object {
            "adjective_attribute_value": "9",
            "celebrateable_type": "interaction",
            "changed_attribute_value": "2018-06-11 00:00:00 UTC",
            "id": "10",
          },
        ],
        "date": "2018-06-11 00:00:00 UTC",
        "id": 0,
      },
      Object {
        "data": Array [
          Object {
            "celebrateable_type": "accepted_challenge",
            "changed_attribute_value": "2018-06-10 00:00:00 UTC",
            "id": "20",
          },
          Object {
            "celebrateable_type": "accepted_community_challenge",
            "changed_attribute_value": "2018-06-10 00:00:00 UTC",
            "id": "30",
          },
        ],
        "date": "2018-06-10 00:00:00 UTC",
        "id": 1,
      },
    ]
  }
  loadMoreItemsCallback={[Function]}
  organization={
    Object {
      "celebrateItems": Array [
        Object {
          "adjective_attribute_value": "9",
          "celebrateable_type": "interaction",
          "changed_attribute_value": "2018-06-11 00:00:00 UTC",
          "id": "10",
        },
        Object {
          "celebrateable_type": "accepted_challenge",
          "changed_attribute_value": "2018-06-10 00:00:00 UTC",
          "id": "20",
        },
        Object {
          "celebrateable_type": "accepted_community_challenge",
          "changed_attribute_value": "2018-06-10 00:00:00 UTC",
          "id": "30",
        },
      ],
      "celebratePagination": Object {
        "hasNextPage": true,
        "page": 1,
      },
      "id": "1",
      "user_created": false,
    }
  }
  refreshCallback={[Function]}
  refreshing={false}
/>
`;

exports[`should render empty correctly 1`] = `
<Connect(CelebrateFeed)
  itemNamePressable={true}
  items={Array []}
  loadMoreItemsCallback={[Function]}
  organization={
    Object {
      "celebrateItems": Array [],
      "celebratePagination": Object {
        "hasNextPage": true,
        "page": 1,
      },
      "id": "1",
      "user_created": false,
    }
  }
  refreshCallback={[Function]}
  refreshing={false}
/>
`;
